@@ -577,6 +577,7 @@ world.loc.Plains.Nomads.Tent.events.push(new Link(
 		party.inventory.AddItem(Items.Fertilium);
 		party.inventory.AddItem(Items.Testos);
 		party.inventory.AddItem(Items.Estros);
+		party.inventory.AddItem(Items.Androgyn);
 		
 		party.inventory.AddItem(Items.Toys.SmallDildo);
 		party.inventory.AddItem(Items.Toys.MediumDildo);
